@startuml
'https://plantuml.com/class-diagram
!include Style.puml
hide circle
title Secret Storage Diagram
skinparam groupInheritance 3
package secrets {
    class Secret {
    }
    class BasicPassword {
    }
    class CreditCard {
    }
    class CryptoWallet {
    }
    class NUSNet {
    }
    class StudentID {
    }
    class WifiPassword {
    }
    Secret <|-- BasicPassword
    Secret <|-- CreditCard
    Secret <|-- CryptoWallet
    Secret <|-- NUSNet
    Secret <|-- StudentID
    Secret <|-- WifiPassword
}
package storage {
    class SecretMaster {
    }
    class SecretEnumerator {
    }
    class SecretSearcher {
    }
    SecretMaster *-up- "1" SecretSearcher
    SecretMaster *-up- "1" SecretEnumerator
    SecretEnumerator *-up- "*" BasicPassword
    SecretEnumerator *-up- "*" CreditCard
    SecretEnumerator *-up- "*" CryptoWallet
    SecretEnumerator *-up- "*" NUSNet
    SecretEnumerator *-up- "*" StudentID
    SecretEnumerator *-up- "*" WifiPassword
    SecretSearcher *-up- "*" BasicPassword
    SecretSearcher *-up- "*" CreditCard
    SecretSearcher *-up- "*" CryptoWallet
    SecretSearcher *-up- "*" NUSNet
    SecretSearcher *-up- "*" StudentID
    SecretSearcher *-up- "*" WifiPassword
}
@enduml